# fukanzen-shogi

./: .gitignore  Cargo.toml  LICENSE  README.md  wrangler.toml
cli/: Cargo.toml
docs/: README.md  不完全将棋_board.js_IO分解アーク_概観と段組.md  不完全将棋_board.js_view純粋化アーク_概観と段組.md  不完全将棋_バックログ_伏線と未決.md  不完全将棋_バージョン互換性管理_方針.md  不完全将棋_プリンシパル設計_対局主体スキーマ.md  不完全将棋_ルール仕様_v0.2.md  不完全将棋_ルール仕様_v0.3.md  不完全将棋_ルール仕様_v0.4.md  不完全将棋_ルール仕様_v0.5.md  不完全将棋_実装変更指示_v0.4_戦国無双拡張.md  不完全将棋_実装変更指示_v0.5_両玉スワップ.md  不完全将棋_実装指示書_Phase1.md  不完全将棋_実装指示書_Phase3_TCP通信秘匿対戦.md  不完全将棋_実装指示書_Wasm足場と棋譜の糊_board分割第一段b.md  不完全将棋_実装指示書_board.js_view純粋化_View1_ラベルのlabelView.md  不完全将棋_実装指示書_board.js_view純粋化_View2_ボタンのbuttonView.md  不完全将棋_実装指示書_kifu吸収と状態更新経路_board分割第三段b-1.md  不完全将棋_実装指示書_overlay計算を純粋化して盤へ寄せる_board分割第二段c.md  不完全将棋_実装指示書_アーカイブ取り出しと再生_淀川第二歩.md  不完全将棋_実装指示書_バージョン管理Step1.md  不完全将棋_実装指示書_ライブ観戦とサーバ側アーカイブ_淀川第三歩.md  不完全将棋_実装指示書_版タプル付きアーカイブ_淀川第一歩.md  不完全将棋_実装指示書_状態を単一のstate器へ集約_board分割第三段a.md  不完全将棋_実装指示書_盤面解釈を核へ返す_board分割第零段.md  不完全将棋_実装指示書_着手組み立ての計算を純粋化_board分割第二段b.md  不完全将棋_実装指示書_第一段階.md  不完全将棋_実装指示書_第三段階_TCP通信秘匿対戦.md  不完全将棋_実装指示書_第二段階_TUI検証卓.md  不完全将棋_実装指示書_終局判定の単一正本化_StepC_engine-wasmをterminal_to_resultへ.md  不完全将棋_実装指示書_終局判定の改訂_ルールv0.6.md  不完全将棋_実装指示書_通信核の一本化_第三段_TUIをネイティブClientSessionへ.md  不完全将棋_実装指示書_通信核の一本化_第二段_protocol-wasmを薄いラッパへ.md  不完全将棋_実装指示書_通信核の一本化アーク_概観と段組.md  不完全将棋_棋譜対局データ設計_方針.md
engine-wasm/: Cargo.toml
notation/: Cargo.toml
notation-wasm/: Cargo.toml
protocol-wasm/: Cargo.toml
tui/: Cargo.toml
tui/src/: app.rs  input.rs  main.rs  net.rs  net_ws.rs  online.rs  portal.rs  ui.rs
(+122 files in other folders)
